barcode logic added
